force-app/main/default/objects/Booking_Offers__c/Booking_Offers__c.object-meta.xml
<CustomObject>
    <label>Booking Offer</label>
    <nameField>
        <displayFormat>BO-{0000}</displayFormat>
        <label>BO Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Offers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>