force-app/main/default/objects/Booking_Offers__c/fields/Application_Booking__c.field-meta.xml
<CustomField>
    <fullName>Application_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application / Booking</label>
    <referenceTo>PropStrength__Application_Booking__c</referenceTo>
    <relationshipLabel>Booking Offers</relationshipLabel>
    <relationshipName>Booking_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>