force-app/main/default/objects/Booking_Offers__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Booking Offers</relationshipLabel>
    <relationshipName>Booking_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>