force-app/main/default/objects/Booking_Offers__c/fields/Offer__c.field-meta.xml
<CustomField>
    <fullName>Offer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offer</label>
    <referenceTo>Offers__c</referenceTo>
    <relationshipLabel>Booking Offers</relationshipLabel>
    <relationshipName>Booking_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>